fix: overflow

--- a/styles.css
+++ b/styles.css
@@ -1,135 +1,206 @@
-/**
-Palette: https://scrimba.com/links/hometown-palette
-RED: #E63946
-LIGHT: #F1FAEE
-AQUA: #A8DADC
-LIGHT BLUE: #457B9D
-DARK BLUE: #1D3557
+.ff-Cinzel {
+  font-family: "Cinzel Decorative", cursive;
+}
+.ff-overpass {
+  font-family: "Overpass", sans-serif;
+}
+.ff-AAzee {
+  font-family: "ABeeZee", sans-serif;
+}
+.yellow{
+  color: rgb(238, 255, 0);
+}
+.order1 {
+  order: 1;
+}
+.margin-r {
+  margin-right: 7rem;
+}
 
-*/
-body{
-    display:flex;
-    justify-content: center;
-    width: 100vw;
-    height: auto;
-    margin: auto;
+body {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100vh;
 }
+
 .main {
-    width: 720px;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    font-family: 'Tajawal', sans-serif;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  color: #e0e1dd;
 }
-.hero{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-height: 343px;
-background: url(/images/hero.jpeg);
-background-position: center;
-background-size: cover;
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  height: 543px;
+  background: url(/images/hero.jpg);
+  background-position: center;
+  background-size: cover;
+  box-shadow: 9px -29px 40px #00111c inset;
 }
-#text{
-    color: white;
+
+.hero-nav {
+  display: flex;
+  justify-content: space-between;
+  height: 200px;
+  width: 96%;
+  color: white;
+  padding-top: 2rem;
+  padding-left: 2rem;
 }
-.heading1{
-    display: block;
-    margin: auto;
-    width: 225px;
-    background: #1D3557;
-    border-radius: 10px;
-    padding: .2rem;
+
+.logo {
+  font-size: 30px;
+  margin: 0;
+  letter-spacing: 0.2rem;
+  color: white;
 }
-.heading2{
-    display: block;
-    margin: auto;
-    padding-inline: 1rem;
-    width: 412px;
-    height: 52px;
-    background: #457B9D;
-    border-radius: 10px;
-    text-align: center;
-    margin-top: 1rem;
-       padding-block-start: 4px;
+nav {
+  display: flex;
+  padding-inline-end: 2rem;
 }
-#text h1{
-    font-weight: 700;
-font-size: 32px;
-line-height: 37px;
+nav li {
+  cursor: pointer;
+  position: relative;
+  height: 2.2rem;
+  list-style: none;
+  font-size: 19px;
+  font-weight: 400;
+  margin-top: 0;
+  margin-right: 1.5rem;
+  border: none;
+  transform: scale(1);
 }
-#text h2{
-    font-weight: 700;
-font-size: 18.72px;
-line-height: 22px;
+
+nav li:hover {
+  transform: scale(1.1);
+  border-bottom: 4px solid yellow;
 }
-img {
-    width: 100px;
+
+#text {
+  display: Flex;
+  flex-direction: column;
+  justify-content: start;
+margin-left: 5rem;
+  height: 17rem;
+  width: 30rem;
 }
-.activity{
-height: 378px;
-left: 0px;
-top: 343px;
-background:#050b0f;
+#text a{
+  text-decoration: none;
+  text-align: left;
+  padding-top: 1rem;
 }
-.activity h3{
-font-weight: 700;
-font-size: 24px;
-line-height: 28px;
-margin: 0 auto;
+.welcome {
+  display: flex;
+  align-items: end;
+  height: 1rem;
+  width: 20rem;
+  padding-block-end: 0.7rem;
 }
-.activity-heading{
-    display: flex ;
-    justify-content: center;
-    align-items: center;
-    width: 439px;
-height: 6rem;
+.right-border {
+  height: 0.07rem;
+  width: 3rem;
+  background: yellow;
+  margin-right: 1rem;
+  margin-bottom: 0.3rem;
 }
-.sports{
-    display:flex;
-    justify-content: center;
+.welcome h5 {
+  margin: 0;
+  color: yellow;
+  font-family: sans-serif;
+  font-size: 10px;
+  font-weight: 800;
+  letter-spacing: 5px;
 }
-.sport-sec{
-    padding-inline: 1.5rem;
-    display: flex ;
-    flex-direction: column;
-align-items: center;
-width: 12rem;
-margin-right: 1rem;
+#text h1 {
+  text-align: left;
+  display: block;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 47px;
+  margin: 0;
 }
-.sport-img{
-    border-radius: 50%;
+
+.activity {
+  height: auto;
+  width: 100%;
+  background: #00111c;
+  color: white;
 }
-.sport-heading{
-    height: 2rem;
-    font-size: 16px;
-    line-height: 18px;
+
+.sports {
+  display: grid;
+  justify-content: center;
+  padding: 3rem;
 }
-.card-sec{
-    display: flex;
-justify-content: center;
-align-items: center;
-    height: 394px;
+.sport-sec {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 20rem;
+  margin-block: 5rem;
+  width: 59rem;
 }
-.card{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #A8DADC;
-   padding: 1rem;
-   border-bottom: 8px solid #1D3557 ;
-    height: 294px;
-    width: 400px;
-    color: #1D3557;
-    border-radius: 10px;
+.sport-img {
+  height: 23rem;
+  width: 16rem;
+  border-radius: 119px;
 }
-.card-img{
-    width: 180px;
-height: 248.67px;
+.sport-img:hover {
+  box-shadow: 2px 2px 10px rgb(245, 247, 147);
 }
-.card-details{
-    padding: .5rem;
+.sport-text {
+  text-align: left;
 }
-#italic{
-font-style: italic;
+.sport-text p {
+  font-size: 11px;
+  line-height: 1.3rem;
+}
+.sport-text a {
+  text-decoration: none;
+}
+.sport-heading {
+  margin-block-start: 1rem;
+  font-size: 27px;
+}
+
+footer {
+
+  display: flex;
+  justify-content:space-evenly;
+  align-content: center;
+  background: #050d12;
+  height: 19rem;
+  padding-inline-start: 3rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  color: white;
+  height: inherit auto;
+  width: 20rem;
+  text-align: left;
+  padding-right: 5rem;
+  padding-top: 3rem;
+
+}
+.card p {
+  font-size: 12px;
+  line-height: 1.1rem;
+  padding-top: 1.5rem;
+}
+.card a{
+  text-decoration: none;
+  padding-top: .5rem;
+  color: white;
+}
+.copyright p{
+  color: #8b8c89;
+}
+#italic {
+  font-style: italic;
 }
